[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
name = "usart"
version = "0.1.0"

[dependencies]
#nmea = "0.0.7"

[dependencies.aux11]
path = "auxiliary"
cortex-m = "0.6.3"

features = ["adapter"]

# enable this if you are going to use an external serial adapter


[dependencies.heapless]
default-features = false
version = "0.3.7"

[dependencies.stm32f3xx-hal]
features = ["stm32f303xc"]
version = "0.5.0"
